--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -1,6 +1,6 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-        <a class="navbar-brand">Youtube Downloader</a>
+        <a class="navbar-brand">Youtube Downloaderrr</a>
             <form  action="{{ url_for('list') }}" method="post" id="form" class="m-auto">
                 <input class="form-control mr-sm-2" id="input-link" name = "input-link" type="search" placeholder="Paste Video or Playlist URL Here" aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" id="search-button" type="submit">Search</button> 
