--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,7 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Downloader</title>
-    <link rel="icon" type="image/x-icon" href="{{ url_for('static',filename='favicon.ico') }}">
     <!--  Boostrap Add -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ url_for('static',filename='style.css') }}">
@@ -17,6 +16,80 @@
     {%include "navbar.html"%}
 
     
+    <div>
+        <ul class="home-section-2-list ls-dlz">
+                                        <li id="how-to-step-1">
+                    <p>
+                        Bu indiriciye video URL&#039;sini girin.
+                    </p>
+                    <div class="test-img-cls">
+                        <img
+                            class="ext-block-image"
+                            src="https://onlinevideoconverter.pro/img/steps/1step.jpg"
+                            width="300"
+                            height="300"
+                            alt=""
+                        >
+                    </div>
+                    <p>
+                        YouTube&#039;daki hedef videoyu belirleyin ve URL&#039;sini alın. Bu indirme aracını açın ve YouTube bağlantısını bekleyen metin kutusuna yapıştırın.
+                    </p>
+                </li>
+                                        <li id="how-to-step-2">
+                    <p>
+                        Tercih ettiğiniz formatı seçin.
+                    </p>
+                    <div class="test-img-cls">
+                        <img
+                            class="ext-block-image"
+                            src="https://onlinevideoconverter.pro/img/steps/2step.jpg"
+                            width="300"
+                            height="300"
+                            alt=""
+                        >
+                    </div>
+                    <p>
+                        Klibinizi ses biçiminde çıkarabilmeniz için MP3&#039;e basın.
+                    </p>
+                </li>
+                                        <li id="how-to-step-3">
+                    <p>
+                        Çıkarma işlemini başlatmak için Dönüştür dokunun.
+                    </p>
+                    <div class="test-img-cls">
+                        <img
+                            class="ext-block-image"
+                            src="https://onlinevideoconverter.pro/img/steps/3step.jpg"
+                            width="300"
+                            height="300"
+                            alt=""
+                        >
+                    </div>
+                    <p>
+                        Bu düğme metin kutusunun altındadır. Basmak, mp4&#039;ünüzü 320kbps mp3 dosyasına dönüştürecektir.
+                    </p>
+                </li>
+                                        <li id="how-to-step-4">
+                    <p>
+                        Video kaydetmeyi bitirmek için İndir dokunun. Tamamlandı!
+                    </p>
+                    <div class="test-img-cls">
+                        <img
+                            class="ext-block-image"
+                            src="https://onlinevideoconverter.pro/img/steps/4stepmp3.jpg"
+                            width="300"
+                            height="300"
+                            alt=""
+                        >
+                    </div>
+                    <p>
+                        İçeriğiniz zaten cihazınızın deposunda ve dinlemeye veya görüntülemeye hazır.
+                    </p>
+                </li>
+                                </ul>
+    </div>
+
+
     <!-- Boostrap Javascript -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
